<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.io.com.dingotrack.ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/splash_logo_height"
                    android:padding="35dp"
                    android:src="@drawable/app_logo" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/appAlphaBlack">

                    <EditText
                        android:id="@+id/emailEditText"
                        style="@style/DingoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/appAlphaBlack">

                    <EditText
                        android:id="@+id/passwordEditText"
                        style="@style/DingoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <CheckBox
                            android:id="@+id/checkemember"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:backgroundTint="@color/colorPrimary"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/text_remember"
                            android:textColor="@color/appAlphaGray"
                            android:textSize="@dimen/size_checkbox_text" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlForgetPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|right"
                            android:text="@string/text_forgot_password"
                            android:textColor="@color/appAlphaGray"
                            android:background="@drawable/ripple_button_rectangle"
                            android:textSize="@dimen/size_checkbox_text" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_blue_button">

                    <Button
                        android:id="@+id/loginButton"
                        style="@style/DingoButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:text="@string/btn_login" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:gravity="center"
                    android:text="@string/text_or"
                    android:textColor="@color/appAlphaBlack"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_fb" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_gp" />

                    </RelativeLayout>
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="right">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_toLeftOf="@+id/rlCreate"
                        android:gravity="center_vertical"
                        android:text="@string/text_signup_link"
                        android:textColor="@color/appAlphaBlack"
                        android:textSize="@dimen/size_checkbox_text" />

                    <RelativeLayout
                        android:id="@+id/rlCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/bg_blue_button_rectangle">

                        <Button
                            android:id="@+id/createButton"
                            style="@style/DingoButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/button_height"
                            android:background="@drawable/ripple_button_rectangle"
                            android:text="@string/btn_create" />
                    </RelativeLayout>

                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
