<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.io.com.dingotrack.ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="280dp"
                android:gravity="center"
                android:paddingTop="15dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_profile_image"
                    android:layout_margin="15dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dummy_name"
                    android:textColor="@color/appAlphaBlack"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:background="@drawable/bg_blue_button"
                    android:layout_height="wrap_content">

                    <Button
                        style="@style/DingoButtonStyle"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:textSize="12dp"
                        android:text="@string/btn_edit_profile" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgUsername"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/imgUsername"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:backgroundTint="@android:color/transparent"
                        android:paddingLeft="10dp"
                        android:text="@string/dummy_name"
                        android:textSize="@dimen/size_edittexts" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/appAlphaGray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgPassword"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/imgPassword"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:text="@string/dummy_name"
                        android:textSize="@dimen/size_edittexts" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/appAlphaGray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgEmail"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/imgEmail"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:text="@string/dummy_email"
                        android:textSize="@dimen/size_edittexts" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/appAlphaGray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/imgphone"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/imgphone"
                        android:clickable="false"
                        android:focusable="false"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:text="@string/dummy_phone"
                        android:textSize="@dimen/size_edittexts" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@color/appAlphaGray" />

                <TextView
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="left"
                    android:text="@string/text_type"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp" />

                <TextView
                    android:textSize="12dp"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="left"
                    android:text="@string/dummy_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_blue_button">

                    <Button
                        style="@style/DingoButtonStyle"
                        android:layout_width="280dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_update_profile" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>